--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <mat-toolbar color="primary">
-  <span>Welcome to {{title}}!</span>
+<mat-toolbar-row>
+  <span class="title">WELCOME TO {{title}}!</span>
+  <span class="example-spacer"></span>
+  <nav class="example-icon">
+   
+    <button mat-flat-button color="link" routerLink="car-list">Car List</button>
+   <span >  |     |  </span>
+    <button mat-flat-button color="link" routerLink="owner-list">Owner List</button>
+  </nav>
+</mat-toolbar-row>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
