--- a/src/app/car-edit/car-edit.component.html
+++ b/src/app/car-edit/car-edit.component.html
@@ -1,7 +1,14 @@
+<div class="main-div">
 <mat-card>
     <form #carForm="ngForm" (ngSubmit)="save(carForm.value)">
+      <mat-card-footer>
+        <div class="giphy">
+          <img src="{{car.giphyUrl}}" alt="{{car.name}}">
+        </div>
+      </mat-card-footer>
+
       <mat-card-header>
-        <mat-card-title><h2>{{car.name ? 'Edit' : 'Add'}} Car</h2></mat-card-title>
+        <mat-card-title><h2>{{car.name ? 'Edit' : 'Add'}} Car Below</h2></mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <input type="hidden" name="href" [(ngModel)]="car.href">
@@ -9,6 +16,12 @@
           <input matInput placeholder="Car Name" [(ngModel)]="car.name"
                  required name="name" #name>
         </mat-form-field>
+      
+        <mat-form-field>
+          <input matInput placeholder="Owner DNI" [(ngModel)]="car.ownerDni"
+                  name="ownerDni" #ownerDni>
+        </mat-form-field>
+
       </mat-card-content>
       <mat-card-actions>
         <button mat-raised-button color="primary" type="submit"
@@ -17,10 +30,8 @@
                 *ngIf="car.href" type="button">Delete</button>
         <a mat-button routerLink="/car-list">Cancel</a>
       </mat-card-actions>
-      <mat-card-footer>
-        <div class="giphy">
-          <img src="{{car.giphyUrl}}" alt="{{car.name}}">
-        </div>
-      </mat-card-footer>
+      
     </form>
   </mat-card>
+
+</div>
