--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,15 +1,24 @@
-<mat-card>
-  <mat-card-title>Car List</mat-card-title>
+<div class="main-div">
+<mat-card >
+  <mat-card-title >CAR LIST</mat-card-title>
   <mat-card-content>
-    <mat-list>
-      <mat-list-item *ngFor="let car of cars">
+    <mat-list class="inline-list">
+      <mat-list-item  *ngFor="let car of cars">
         <img mat-list-avatar src="{{car.giphyUrl}}" alt="{{car.name}}">
-        <h3 mat-line>
+        <h2 mat-line>
           <a mat-button [routerLink]="['/car-edit', car.id]">{{car.name}}</a>
-        </h3>
+          
+        </h2>
+        <h5 mat-line>Owner: {{car?.ownerDni}}</h5>
+        
+        
+        <mat-divider></mat-divider>
+        
       </mat-list-item>
+      
     </mat-list>
   </mat-card-content>
 
-  <button mat-fab color="primary" [routerLink]="['/car-add']">Add</button>
+  <button class="color-boton" mat-raised-button color="Accent" [routerLink]="['/car-add']">Add Car</button>
 </mat-card>
+</div>
